--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -190,6 +190,18 @@
   gap: 10px;
 }
 
+.githubButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 1rem;
+  padding: 0.7rem;
+  transition: all 0.3s ease;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .modGrid {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
